test/files/neg/t11607.check
t11607.scala:2: error: class migration in package annotation cannot be accessed as a member of package annotation
@migration("", "") class C
 ^
one error found
